--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -14,15 +14,15 @@ patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
 seed=0
-encrypt_pck=false
-encrypt_directory=false
+encrypt_pck=true
+encrypt_directory=true
 script_export_mode=2
 
 [preset.0.options]
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
+debug/export_console_wrapper=0
 binary_format/embed_pck=false
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
